--- a/restaurante/src/main/resources/application.properties
+++ b/restaurante/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurante
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+server.error.include-message=always
 
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+## OAuth config
+security.oauth2.client.scope=password
+security.oauth2.client.client-id=admin
+security.oauth2.client.client-secret=admin
+
+##Swagger
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
